--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vue-autosuggest": "^2.2.0",
         "vue-feather-icons": "^5.1.0",
         "vue2-editor": "^2.10.2"
     }
