--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=TrenchDevs
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-BASE_URL=trenchdevs.test
+APP_URL=http://localhost:8000
+BASE_URL=localhost
 
 LOG_CHANNEL=stack
 
@@ -45,3 +45,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+CACHE_EXPIRE=-1
+SESSION_DOMAIN=".${BASE_URL}"
