Initial README.md for trenchdevs

--- a/.env.example
+++ b/.env.example
@@ -46,4 +46,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 CACHE_EXPIRE=-1
-SESSION_DOMAIN=".${BASE_URL}"
+
+# on production this is set to ".${BASE_URL}" (having problems on cross domain cookies on localhost:8000)
+# might need to figure this out in the future
+SESSION_DOMAIN="${BASE_URL}"
