--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         "graham-campbell/markdown": "^13.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
+        "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "trenchdevs/csv": "dev-master",
-        "tymon/jwt-auth": "1.0.*",
-        "ext-json": "*"
+        "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
