SITE | allow non-wildcard sites, docker volumes for mysql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     tmpfs: /var/lib/mysql
     volumes:
       - ./database/docker-init:/docker-entrypoint-initdb.d
+      - ./docker_local/volumes/mysql:/var/lib/mysql
     ports:
       - ${DB_PORT}:3306
     healthcheck:
