docker local | compose enhancements

--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,21 @@ BASE_URL=localhost
 
 LOG_CHANNEL=stack
 
+# DB: via the default docker config
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=trenchdevs
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=mysql
+
+# DB: via artisan serve
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=trenchdevs
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -55,3 +64,11 @@ SESSION_DOMAIN="${BASE_URL}"
 # https://github.com/facade/ignition/discussions/378
 # https://laracasts.com/discuss/channels/laravel/keep-getting-file-get-content-error
 IGNITION_ENABLE_RUNNABLE_SOLUTIONS=false
+
+# docker specific configurations
+
+# What port does the container expose for DB
+FORWARD_DB_PORT=3310
+
+# What port does the container expose for the php app
+FORWARD_APP_PORT=80
