--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-    tmpfs: /var/lib/mysql
+    # tmpfs: /var/lib/mysql
     volumes:
-      - './database/docker-init:/docker-entrypoint-initdb.d'
-      - './docker/volumes/mysql:/var/lib/mysql'
+      #- './database/docker-init:/docker-entrypoint-initdb.d'
+      - ./docker/volumes/mysql:/var/lib/mysql
     ports:
-      - ${DB_PORT}:3306
+      - ${FORWARD_DB_PORT}:3306
     healthcheck:
       test: mysqladmin ping
     networks:
@@ -23,15 +23,20 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - db
-    image: trenchdevs/trenchdevs
+    # image: trenchdevs/trenchdevs
     container_name: trenchdevs-app
     restart: unless-stopped
     working_dir: /var/www/trenchdevs
     volumes:
       - ./:/var/www/trenchdevs
+    ports:
+    - ${FORWARD_APP_PORT}:80
     networks:
       - trenchdevs-docker-network
 
 networks:
   trenchdevs-docker-network:
     driver: bridge
+
+#volumes:
+#  ./docker/volumes/mysql:
