--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,11 @@
-.git/
-Notes/
-vendor/
-
-.*
-*.md
-
-phpunit.xml
-server.php
-webpack.mix.js
-
-public/hot/
-public/storage/
-storage/*.key/
-
-docker-compose.yml
-
+.env
+.git
+bootstrap/cache/*
+node_modules
+public/dist/*
+storage/app/*
+storage/framework/cache/*
+storage/framework/sessions/*
+storage/framework/views/*
+storage/logs/*
 vendor
