--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "---- DOCKER HELPERS ----": "",
+        "dev:up": "docker-compose up -d",
+        "dev:down": "docker-compose down",
+        "dev:ssh": "docker exec -it trenchdevs-app bash"
     },
     "devDependencies": {
         "axios": "^0.19",
