--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ version: '3.5'
 services:
   db:
     image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     volumes:
       - ./database/docker-init:/docker-entrypoint-initdb.d
       - ./docker/volumes/mysql:/var/lib/mysql
@@ -18,7 +19,7 @@ services:
 
   app:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
     depends_on:
       - db
@@ -26,7 +27,7 @@ services:
     restart: unless-stopped
     working_dir: /var/www/trenchdevs
     volumes:
-      - ./backend:/var/www/trenchdevs
+      - .:/var/www/trenchdevs
     ports:
       - ${FORWARD_APP_PORT:-80}:80
     networks:
