--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server:start": "docker-compose up -d"
+    "server:up": "docker-compose up -d",
+    "server:down": "docker-compose down"
   },
   "repository": {
     "type": "git",
