CORE | docker updates & refactor

--- a/backend/docker/supervisor.conf
+++ b/backend/docker/supervisor.conf
@@ -6,7 +6,7 @@ pidfile=/var/run/supervisord.pid
 
 [group:laravel-worker]
 priority=999
-programs=nginx,php8-fpm,laravel-schedule,laravel-notification,laravel-queue
+programs=nginx,php8-fpm,laravel-queue
 
 [program:nginx]
 priority=10
@@ -30,24 +30,6 @@ command=/usr/local/sbin/php-fpm -R
 stderr_logfile=/var/log/nginx/php-error.log
 stdout_logfile=/var/log/nginx/php-access.log
 
-[program:laravel-schedule]
-numprocs=1
-autostart=true
-autorestart=true
-redirect_stderr=true
-process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan schedule:run
-stdout_logfile=/var/log/nginx/schedule.log
-
-[program:laravel-notification]
-numprocs=1
-autostart=true
-autorestart=true
-redirect_stderr=true
-process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan notification:worker
-stdout_logfile=/var/log/nginx/notification.log
-
 [program:laravel-queue]
 numprocs=5
 autostart=true
@@ -55,4 +37,4 @@ autorestart=true
 redirect_stderr=true
 process_name=%(program_name)s_%(process_num)02d
 stdout_logfile=/var/log/nginx/worker.log
-command=php /var/www/artisan queue:work sqs --sleep=3 --tries=3
+command=php /var/www/artisan queue:work --sleep=3 --tries=3
