--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - db
     container_name: trenchdevs-app
     restart: unless-stopped
-    working_dir: /var/www/trenchdevs
+    working_dir: /var/www
     volumes:
       - ./backend:/var/www/
     ports:
