--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server:up": "docker-compose up -d",
-    "server:down": "docker-compose down"
+    "server:down": "docker-compose down",
+    "server:ssh": "docker exec -it trenchdevs-app bash"
   },
   "repository": {
     "type": "git",
