CORE | doc updates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,8 @@ BASE_URL=localhost
 LOG_CHANNEL=stack
 
 # DB: via the default docker config
+# Use the root .env credentials for these 
+# 	e.g. DB_PASSWORD should be equal to DB_ROOT_PASSWORD
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
@@ -64,11 +66,3 @@ SESSION_DOMAIN="${BASE_URL}"
 # https://github.com/facade/ignition/discussions/378
 # https://laracasts.com/discuss/channels/laravel/keep-getting-file-get-content-error
 IGNITION_ENABLE_RUNNABLE_SOLUTIONS=false
-
-# docker specific configurations
-
-# What port does the container expose for DB
-FORWARD_DB_PORT=3310
-
-# What port does the container expose for the php app
-FORWARD_APP_PORT=80
