CORE | minor updates

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,7 +1,8 @@
-# What port does the container expose for DB
-FORWARD_DB_PORT=3306
-
 # What port does the container expose for the php app
-FORWARD_APP_PORT=80
+FORWARD_APP_PORT=30000
 
+# What port does the container expose for DB
+FORWARD_DB_PORT=30001
+
+# Database root password
 DB_ROOT_PASSWORD=mysql
