--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ yarn-error.log
 docker/volumes/mysql
 .DS_Store
 public/.DS_Store
+
+# historicaly these folders are on the root of the project
+bootstrap
+storage
