--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,16 +3,16 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
-BASE_URL=localhost
+BASE_URL=trenchdevs.localhost
 
 LOG_CHANNEL=stack
 
 # DB: via the default docker config
-# Use the root .env credentials for these 
+# Use the root .env credentials for these
 # 	e.g. DB_PASSWORD should be equal to DB_ROOT_PASSWORD
 DB_CONNECTION=mysql
 DB_HOST=db
-DB_PORT=3306
+DB_PORT=30001
 DB_DATABASE=trenchdevs
 DB_USERNAME=root
 DB_PASSWORD=mysql
