--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    depends_on:
-      - db
+#    depends_on:
+#      - db
     container_name: trenchdevs-app
     restart: unless-stopped
     working_dir: /var/www
