--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "init:env": "cp -n .env.docker.example .env && cp -n backend/.env.example backend/.env",
     "--server--": "----------------------------------------------------------------------",
     "server:up": "docker-compose up -d",
+    "server:up:lite": "docker-compose up app -d",
     "server:down": "docker-compose down",
     "server:ssh": "docker exec -it trenchdevs-app bash"
   },
