--- a/backend/.env.example
+++ b/backend/.env.example
@@ -66,3 +66,6 @@ SESSION_DOMAIN="${BASE_URL}"
 # https://github.com/facade/ignition/discussions/378
 # https://laracasts.com/discuss/channels/laravel/keep-getting-file-get-content-error
 IGNITION_ENABLE_RUNNABLE_SOLUTIONS=false
+
+# If you wish to log out of the IdP after SLO has completed, set LOGOUT_AFTER_SLO to true in your .env perform the logout action on the Idp.
+LOGOUT_AFTER_SLO=false
