--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "ext-json": "*",
         "aws/aws-sdk-php": "^3.148",
         "box/spout": "^3.1",
+        "codegreencreative/laravel-samlidp": "^5.1",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
