--- a/web/composer.json
+++ b/web/composer.json
@@ -15,23 +15,23 @@
         "codegreencreative/laravel-samlidp": "^5.1",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "graham-campbell/markdown": "^13.1",
+        "fruitcake/laravel-cors": "^3.0",
+        "graham-campbell/markdown": "^14.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
-        "league/flysystem-aws-s3-v3": "^1.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^2.5",
         "trenchdevs/csv": "dev-master",
         "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0"
     },
     "config": {
