--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@ yarn-error.log
 .idea/
 .env.testing
 
+#############################
+# Docker Volumes
+#############################
 docker/volumes/mysql
+docker/volumes/postgres
+
 .DS_Store
 public/.DS_Store
 
