--- a/web/.env.example
+++ b/web/.env.example
@@ -10,12 +10,12 @@ LOG_CHANNEL=stack
 # DB: via the default docker config
 # Use the root .env credentials for these
 # 	e.g. DB_PASSWORD should be equal to DB_ROOT_PASSWORD
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=trenchdevs
-DB_USERNAME=root
-DB_PASSWORD=mysql
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 # DB: via artisan serve
 #DB_CONNECTION=mysql
