v2 | configure postgres extensions

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -6,29 +6,37 @@ WORKDIR /var/www
 # Add docker php ext repo
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
-# Install php extensions
-RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
-    install-php-extensions mbstring pdo_mysql zip exif pcntl gd memcached
-
-# Install dependencies
+#Install dependecies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
     libjpeg62-turbo-dev \
     libfreetype6-dev \
+    libzip-dev \
     locales \
     zip \
     jpegoptim optipng pngquant gifsicle \
+    vim \
     unzip \
     git \
+    curl \
+    libpq-dev \
     curl \
     lua-zlib-dev \
     libmemcached-dev \
     nginx \
-    libpq-dev
+    supervisor
 
-# Install supervisor
-RUN apt-get install -y supervisor
+
+#Clear cache
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+#Install Extensions
+RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql
+RUN docker-php-ext-install pdo pdo_pgsql pgsql zip exif pcntl
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/
+RUN docker-php-ext-install gd
+
 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
