--- a/backend/composer.json
+++ b/backend/composer.json
@@ -18,21 +18,26 @@
         "fruitcake/laravel-cors": "^3.0",
         "graham-campbell/markdown": "^14.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "inertiajs/inertia-laravel": "^0.5.4",
         "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.9",
+        "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^2.5",
+        "spatie/laravel-markdown": "^2.2",
+        "tightenco/ziggy": "^1.0",
         "trenchdevs/csv": "dev-master",
         "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
+        "barryvdh/laravel-debugbar": "^3.7",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/breeze": "^1.11",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
