sbadmin | WIP: icons on layout

--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "react-feather": "^2.0.10",
         "vue-autosuggest": "^2.2.0",
         "vue-feather-icons": "^5.1.0",
         "vue2-editor": "^2.10.2"
