--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,14 +35,26 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+#MAIL_MAILER=smtp
+#MAIL_HOST=smtp.mailtrap.io
+#MAIL_PORT=2525
+#MAIL_USERNAME=null
+#MAIL_PASSWORD=null
+#MAIL_ENCRYPTION=null
+#MAIL_FROM_ADDRESS=null
+#MAIL_FROM_NAME="${APP_NAME}"
+
+########################################
+# MAILHOG
+########################################
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=mail
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="noreply@trenchdevs.org"
+MAIL_FROM_NAME="TrenchDevs"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
