--- a/backend/package.json
+++ b/backend/package.json
@@ -19,29 +19,26 @@
         "@vitejs/plugin-react": "^2.0.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.19",
+        "axios": "^0.27.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.5",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.5.2",
         "lodash": "^4.17.20",
         "popper.js": "^1.12",
         "postcss": "^8.4.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^3.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "tailwindcss": "^3.1.0"
     },
     "dependencies": {
+        "markdown-it": "^13.0.1",
         "react-feather": "^2.0.10",
-        "slugify": "^1.6.5",
-        "vue-autosuggest": "^2.2.0",
-        "vue-feather-icons": "^5.1.0",
-        "vue2-editor": "^2.10.2"
+        "react-markdown-editor-lite": "^1.3.3",
+        "slugify": "^1.6.5"
     }
 }
