--- a/backend/docker/supervisor.conf
+++ b/backend/docker/supervisor.conf
@@ -31,7 +31,8 @@ stderr_logfile=/var/log/nginx/php-error.log
 stdout_logfile=/var/log/nginx/php-access.log
 
 [program:laravel-queue]
-numprocs=5
+user=www
+numprocs=2
 autostart=true
 autorestart=true
 redirect_stderr=true
