--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
 
   backend:
     build:
+      args:
+        USER_GID: ${USER_GID:-1000}
+        USER_UID: ${USER_UID:-1000}
       context: ./backend
       dockerfile: Dockerfile
     container_name: trenchdevs-backend
