v2 | portfolio details, docker updates

--- a/backend/docker/supervisor.conf
+++ b/backend/docker/supervisor.conf
@@ -6,7 +6,8 @@ pidfile=/var/run/supervisord.pid
 
 [group:laravel-worker]
 priority=999
-programs=nginx,php8-fpm,laravel-queue
+# programs=nginx,php8-fpm,laravel-schedule,laravel-notification,laravel-queue
+programs=nginx,php8-fpm,laravel-schedule,laravel-queue
 
 [program:nginx]
 priority=10
@@ -30,9 +31,29 @@ command=/usr/local/sbin/php-fpm -R
 stderr_logfile=/var/log/nginx/php-error.log
 stdout_logfile=/var/log/nginx/php-access.log
 
+# commented out: this should be the server's responsibility
+# [program:laravel-schedule]
+# user=www
+# numprocs=1
+# autostart=true
+# autorestart=true
+# redirect_stderr=true
+# process_name=%(program_name)s_%(process_num)02d
+# command=php /var/www/artisan schedule:run
+# stdout_logfile=/var/log/nginx/schedule.log
+
+# [program:laravel-notification]
+# numprocs=1
+# autostart=true
+# autorestart=true
+# redirect_stderr=true
+# process_name=%(program_name)s_%(process_num)02d
+# command=php /var/www/artisan notification:worker
+# stdout_logfile=/var/log/nginx/notification.log
+
 [program:laravel-queue]
 user=www
-numprocs=2
+numprocs=5
 autostart=true
 autorestart=true
 redirect_stderr=true
