--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "markdown-it": "^13.0.1",
+        "react-dropzone": "^14.2.2",
         "react-feather": "^2.0.10",
         "react-markdown-editor-lite": "^1.3.3",
         "slugify": "^1.6.5"
