--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,7 +12,7 @@ LOG_CHANNEL=stack
 # 	e.g. DB_PASSWORD should be equal to DB_ROOT_PASSWORD
 DB_CONNECTION=pgsql
 DB_HOST=db
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
@@ -27,7 +27,8 @@ DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+#QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
