--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ yarn-error.log
 # Docker Volumes
 #############################
 docker/volumes/mysql
-#docker/volumes/postgres
+docker/volumes/postgres
 
 .DS_Store
 public/.DS_Store
