--- a/backend/docker/supervisor.conf
+++ b/backend/docker/supervisor.conf
@@ -22,6 +22,7 @@ stderr_logfile=/var/log/nginx/error.log
 stdout_logfile=/var/log/nginx/access.log
 
 [program:php8-fpm]
+user=www
 priority=5
 autostart=true
 autorestart=true
@@ -52,6 +53,7 @@ stdout_logfile=/var/log/nginx/php-access.log
 # stdout_logfile=/var/log/nginx/notification.log
 
 [program:laravel-queue]
+user=www
 numprocs=5
 autostart=true
 autorestart=true
