Revert "core: fixes"
This reverts commit ac16834403b2d2fac63542922d02a49c88462fa4.

--- a/backend/docker/supervisor.conf
+++ b/backend/docker/supervisor.conf
@@ -7,7 +7,7 @@ pidfile=/var/run/supervisord.pid
 [group:laravel-worker]
 priority=999
 # programs=nginx,php8-fpm,laravel-schedule,laravel-notification,laravel-queue
-programs=nginx,php8-fpm,laravel-queue
+programs=nginx,php8-fpm,laravel-schedule,laravel-queue
 
 [program:nginx]
 priority=10
@@ -22,7 +22,6 @@ stderr_logfile=/var/log/nginx/error.log
 stdout_logfile=/var/log/nginx/access.log
 
 [program:php8-fpm]
-user=www
 priority=5
 autostart=true
 autorestart=true
