--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,8 @@ docker/volumes/postgres
 .DS_Store
 public/.DS_Store
 
+# historicaly these folders are on the root of the project
+bootstrap
+storage
+
 admin-frontend
