--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -67,15 +67,7 @@ RUN cp docker/nginx.conf /etc/nginx/sites-enabled/default
 RUN mkdir /var/log/php
 RUN touch /var/log/php/errors.log && chmod ug+w /var/log/php/errors.log
 
-RUN mkdir -p /var/www/storage/framework/sessions  \
-    /var/www/storage/framework/views  \
-    /var/www/storage/framework/cache \
-    /var/www/storage/framework/logs
-
-RUN chown -R www:www-data /var/www/storage
-RUN chmod -R ug+w /var/www/storage
-
-RUN composer install
+RUN composer install --optimize-autoloader --no-dev
 RUN chmod +x /var/www/docker/run.sh
 
 EXPOSE 80
