--- a/backend/docker/supervisor.conf
+++ b/backend/docker/supervisor.conf
@@ -7,7 +7,7 @@ pidfile=/var/run/supervisord.pid
 [group:laravel-worker]
 priority=999
 # programs=nginx,php8-fpm,laravel-schedule,laravel-notification,laravel-queue
-programs=nginx,php8-fpm,laravel-schedule,laravel-queue
+programs=nginx,php8-fpm,laravel-queue
 
 [program:nginx]
 priority=10
