--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ docker/volumes/postgres
 public/.DS_Store
 
 # historicaly these folders are on the root of the project
-bootstrap
-storage
+# bootstrap
+#storage
 
 admin-frontend
