--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,8 @@
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^35.0.1",
+        "@ckeditor/ckeditor5-react": "^5.0.2",
         "markdown-it": "^13.0.1",
         "react-dropzone": "^14.2.2",
         "react-feather": "^2.0.10",
