--- a/backend/docker/supervisor.conf
+++ b/backend/docker/supervisor.conf
@@ -1,4 +1,5 @@
 [supervisord]
+user=root
 nodaemon=true
 loglevel = info
 logfile=/var/log/supervisord.log
@@ -52,7 +53,6 @@ stdout_logfile=/var/log/nginx/php-access.log
 # stdout_logfile=/var/log/nginx/notification.log
 
 [program:laravel-queue]
-user=www
 numprocs=5
 autostart=true
 autorestart=true
