v2 | announcements, email logs

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,8 +1,14 @@
-# What port does the container expose for the php app
-FORWARD_APP_PORT=30000
-
 # What port does the container expose for DB
-FORWARD_DB_PORT=30001
+FORWARD_DB_PORT=22070
+
+# Laravel application port
+FORWARD_APP_PORT=22071
 
 # Database root password
 DB_ROOT_PASSWORD=mysql
+
+# Mailhog web port
+MAIL_HOST_WEB_PORT=8026
+
+# Mail Host (default: Mailhog)
+MAIL_HOST_SMTP_PORT=1026
