--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "init:env": "cp -n .env.docker.example .env && cp -n backend/.env.example backend/.env",
     "--Backend--": "----------------------BACK END COMMANDS----------------------------",
     "be:dev": "docker-compose up -d && npm run --prefix backend",
+    "fe:build": "npm run build --prefix backend",
     "be:up": "docker-compose up -d",
     "be:up:lite": "docker-compose up app -d",
     "be:down": "docker-compose down",
