--- a/backend/composer.json
+++ b/backend/composer.json
@@ -50,12 +50,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         },
-        "classmap": [
-            "database/seeders",
-            "database/factories"
-        ],
         "files": [
             "app/Helpers/common_helpers.php"
         ]
