--- a/backend/.env.example
+++ b/backend/.env.example
@@ -72,8 +72,7 @@ CACHE_EXPIRE=-1
 
 # on production this is set to ".${BASE_URL}" (having problems on cross domain cookies on localhost:8000)
 # might need to figure this out in the future
-SESSION_DOMAIN="${BASE_URL}"
-
+SESSION_DOMAIN=null
 # Runnable Solutions seem to allow Remote Code Execution by Default
 # https://github.com/facade/ignition/discussions/378
 # https://laracasts.com/discuss/channels/laravel/keep-getting-file-get-content-error
