--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,17 @@ yarn-error.log
 .idea/
 .env.testing
 
+#############################
+# Docker Volumes
+#############################
 docker/volumes/mysql
+docker/volumes/postgres
+
 .DS_Store
 public/.DS_Store
 
 # historicaly these folders are on the root of the project
-bootstrap
-storage
+# bootstrap
+#storage
 
 admin-frontend
