--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "i1": "cp -n .env.docker.example .env && cp -n backend/.env.example backend/.env",
     "i2": "mkdir -p docker/volumes/postgres",
     "i3": "docker-compose build && docker-compose up -d",
-    "i4": "npm run be:composer:install && npm run be:migrate",
-    "i5": "cd backend && npm install && npm run build && cd .. && npm run permissions:fix",
+    "i4": "npm run be:composer:install && npm run be:migrate && npm run permissions:fix",
+    "i5": "cd backend && npm install && npm run build && cd ..",
     "--Backend--": "----------------------BACK END COMMANDS----------------------------",
     "be:dev": "docker-compose up -d && npm run --prefix backend",
     "fe:build": "npm run build --prefix backend",
