--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "--init--": "----------------------------------------------------------------------",
+    "--init--": "------------------------------------------------------------------------------------------------------",
     "be:init": "npm run i1 && npm run i2 && npm run i3 && npm run i4 && npm run i5",
     "i1": "cp -n .env.docker.example .env && cp -n backend/.env.example backend/.env",
     "i2": "mkdir -p docker/volumes/postgres",
     "i3": "docker-compose build && docker-compose up -d",
-    "i4": "npm run be:composer:install && npm run be:migrate && npm run permissions:fix",
+    "i4": "npm run be:composer:install && npm run be:migrate && be:key:generate && npm run permissions:fix",
     "i5": "cd backend && npm install && npm run build && cd ..",
-    "--Backend--": "----------------------BACK END COMMANDS----------------------------",
+    "--Backend--": "----------------------BACK END COMMANDS------------------------------------------------------------",
     "be:dev": "docker-compose up -d && npm run --prefix backend",
     "fe:build": "npm run build --prefix backend",
     "be:up": "docker-compose up -d",
@@ -19,6 +19,7 @@
     "be:down": "docker-compose down",
     "be:composer:install": "docker exec -it --user www:www-data trenchdevs-backend composer install",
     "be:migrate": "docker exec -it --user www:www-data trenchdevs-backend php artisan migrate",
+    "be:key:generate": "docker exec -it --user www:www-data trenchdevs-backend php artisan key:generate",
     "be:ssh": "docker exec -it --user www:www-data trenchdevs-backend bash",
     "be:ssh:root": "docker exec -it trenchdevs-backend bash",
     "permissions:fix": "docker exec -i trenchdevs-backend bash -c 'chown -R www:www-data /var/www/storage /var/www/resources && chmod ug+w -R /var/www/storage /var/www/resources'"
