--- a/.env.docker.example
+++ b/.env.docker.example
@@ -5,7 +5,7 @@ FORWARD_DB_PORT=22070
 FORWARD_APP_PORT=22071
 
 # Database root password
-DB_ROOT_PASSWORD=mysql
+DB_ROOT_PASSWORD=postgres
 
 # Mailhog web port
 MAIL_HOST_WEB_PORT=8026
