--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,7 +26,7 @@ DB_PASSWORD=p2ssw0rd
 #DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=database
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
